elk/kibana/templates/service.yaml
---
# Source: kibana/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elk-kibana
  labels: 
    app: kibana
    release: "elk"
    heritage: Helm
spec:
  type: ClusterIP
  ports:
    - port: 5601
      protocol: TCP
      name: http
      targetPort: 5601
  selector:
    app: kibana
    release: "elk"
